I haved updated the first online shopping page, and modified some grid layout issues.

--- a/public_html/css/shopmain.css
+++ b/public_html/css/shopmain.css
@@ -73,7 +73,6 @@ p,code,figcaption{
 /*	font-family: thin;*/
 	/* first # is top and bottom, second # is left and right margin */
 	margin: 0.25rem 0.5rem;
-/*	try make a paragraph half-page length*/
 }
 
 .psubtitle{
@@ -82,7 +81,15 @@ p,code,figcaption{
 /*	font-family: thin;*/
 	/* first # is top and bottom, second # is left and right margin */
 	margin: 0.25rem 0.5rem;
-/*	try make a paragraph half-page length*/
+}
+
+.p-payment-method{
+	font-size: 1.5rem;
+	font-family:Abadi MT Condensed Extra Bold;
+	text-align: left;
+	display: inline-block;
+/*	margin: 0.25rem 0.5rem;*/
+
 }
 
 .link{
@@ -154,7 +161,7 @@ a:hover{
 /*responsive image styles*/
 img{
     height: auto;
-    max-width: 100%;
+    max-width: auto;
 }
 
 figure{
@@ -254,8 +261,8 @@ input:hover{
 
 article {
 	text-align: left;
-	margin: 2rem 0; 
-	padding: 2rem;
+/*	margin: 2rem 0rem;*/ 
+/*	padding: 2rem;*/
 /* the border does not look nice */
 /*	border: 1px solid blue;*/
 	-moz-box-sizing: border-box;
@@ -269,7 +276,7 @@ article {
     border-style: solid;
     border-width: 0.1rem;
     border-color: #929595;
-	padding: 0.5em 0.5em;
+	padding: 0.3em 0.3em;
 	text-decoration: none;
 	-webkit-transition: background-color 0.5s;
 	transition: background-color 0.5s;
@@ -279,10 +286,9 @@ article {
 	font-family: MTF Sweet Cheeks;
 	font-weight: normal;
 	font-size: 1.2em;
-	float: right;
 	text-align: center;
-	margin-right: 8em;
-	margin-top: 1.5em;
+
+	float: right;
 }
 
 .login-button-nav:hover, .login-button-nav:active, .login-button-nav:focus{
@@ -291,31 +297,88 @@ article {
 /*    border-radius: 0.25rem;*/
 }
 
-.image-button-nav, .image-button-nav:visited{
+.image-button-nav-cat-foods, .image-button-nav-cat-foods:visited{
+	/*	add background image for the cat foods product list image button */
+	background: transparent url(../img/Cat_Foods_Icon.jpg) no-repeat;
 	display: inline-block;
-	background-color:  #F39873;
+    position: relative;
+	width: 30rem;
+	height: 24rem;
+
+	/*	background-color:  #F39873;*/
 	color: white;
     border-style: solid;
     border-width: 0.1rem;
     border-color: #929595;
-	padding: 0.5em 0.5em;
+	padding: 0.3em 0.3em;
 	text-decoration: none;
 	-webkit-transition: background-color 0.5s;
 	transition: background-color 0.5s;
-	width:100%;
-/*	border-radius:10px;*/
-/*  border-radius: 0.25rem;*/
 	font-family: MTF Sweet Cheeks;
 	font-weight: normal;
-	font-size: 3em;
+	font-size: 1em;
 	text-align: center;
-	margin-left: 8em;
-	margin-top: 3em;
-	width: 120%;
-	height: 120%;
 }
 
-.image-button-nav:hover, .image-button-nav:active, .image-button-nav:focus{
+.image-button-nav-cat-toys, .image-button-nav-cat-toys:visited{
+	/*	add background image for the cat toys product list image button */
+	background: transparent url(../img/Cat_Toys_Icon.png) no-repeat;
+	display: inline-block;
+	position: relative;
+	width: 30rem;
+	height: 24rem;
+
+	/*	background-color:  #F39873;*/
+	color: white;
+    border-style: solid;
+    border-width: 0.1rem;
+    border-color: #929595;
+	padding: 0.3em 0.3em;
+	text-decoration: none;
+	-webkit-transition: background-color 0.5s;
+	transition: background-color 0.5s;
+	font-family: MTF Sweet Cheeks;
+	font-weight: normal;
+	font-size: 1em;
+	text-align: center;
+}
+
+.image-button-nav-cat-clothes, .image-button-nav-cat-clothes:visited{
+	/*	add background image for the cat toys product list image button */
+	background: transparent url(../img/Cat_Clothes_Icon.jpg) no-repeat;
+	display: inline-block;
+	position: relative;
+	width: 30rem;
+	height: 24rem;
+
+	/*	background-color:  #F39873;*/
+	color: white;
+    border-style: solid;
+    border-width: 0.1rem;
+    border-color: #929595;
+	padding: 0.3em 0.3em;
+	text-decoration: none;
+	-webkit-transition: background-color 0.5s;
+	transition: background-color 0.5s;
+	font-family: MTF Sweet Cheeks;
+	font-weight: normal;
+	font-size: 1em;
+	text-align: center;
+}
+
+.image-button-nav-cat-foods:hover, .image-button-nav-cat-foods:active, .image-button-nav-cat-foods:focus{
+	background-color: #FCBCA7;
+	color: #C2C0BC;
+/*    border-radius: 0.25rem;*/
+}
+
+.image-button-nav-cat-toys:hover, .image-button-nav-cat-toys:active, .image-button-nav-cat-toys:focus{
+	background-color: #FCBCA7;
+	color: #C2C0BC;
+/*    border-radius: 0.25rem;*/
+}
+
+.image-button-nav-cat-clothes:hover, .image-button-nav-cat-clothes:active, .image-button-nav-cat-clothes:focus{
 	background-color: #FCBCA7;
 	color: #C2C0BC;
 /*    border-radius: 0.25rem;*/
@@ -328,7 +391,7 @@ article {
     border-style: solid;
     border-width: 0.1rem;
     border-color: #929595;
-	padding: 0.5em 0.5em;
+	padding: 0.3em 0.3em;
 	text-decoration: none;
 	-webkit-transition: background-color 0.5s;
 	transition: background-color 0.5s;
@@ -339,35 +402,44 @@ article {
 	font-weight: normal;
 	font-size: 1.2em;
 	text-align: center;
-	margin-left: 8em;
-	margin-top: 2.5em;
 }
 
 .button-nav:hover, .button-nav:active, .button-nav:focus{
 	background-color: #FCBCA7;
 	color: #C2C0BC;
-/*    border-radius: 0.25rem;*/
 }
 
-.addtoccart-button{
-	background-color: #F39873;
-	color: white;
-/*    border-radius: 0.25rem;*/
-	font-family:  MTF Sweet Cheeks;;
-	font-weight: normal;
-	text-align: center;
-	margin: 0.25rem 0.5rem;
-	padding: 0.25rem 0.45rem;
-	font-size: 1.2em;
-	border-style: solid;
-    border-width: 0.1rem;
-    border-color: #929595;
-	float: right;
-}
+/* set top main navigation layout */
+ .topmenu{
+    margin-left: 8em;
+	margin-top: 2.5em;
+	margin-right: 8em;
+ }
 
-.addtoccart-button:hover{
-	background-color: #F39873;
-	color: #C2BFBB;
-/*    border-radius: 0.25rem;*/
-	font-family:  MTF Sweet Cheeks;;
+/* set layout for three login buttons */
+ .login-methods{
+ 	margin-right: 8em;
+	margin-top: 1.5em;
+	margin-left: 8em;
+ }
+
+ .cat-foods-image-button-layout{
+ 	margin-left: 8em;
+ 	margin-top: 10em;
+ }
+
+ .cat-toys-image-button-layout{
+ 	margin-left: 8em;
+/* 	margin-top: 10em;*/
+ }
+
+ .cat-clothes-image-button-layout{
+ 	margin-left: 8em;
+/* 	margin-top: 10em;*/
+ }
+
+ .payment-methods-layout{
+ 	margin-right: 8em;
+	margin-top: 2em;
+	margin-left: 8em;
  }
